<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_drawer_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_home_plans"
            android:title="@string/menu_exercises" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_nav_drawer_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_drawer_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_nav_drawer_timer"
            android:title="@string/menu_timer" />
    </group>
</menu>
