<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_selector"
                android:layout_marginStart="8dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="8dp"
                android:text="@string/headline"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textColor="@color/headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/home_button_statistics"
                android:layout_width="0dp"
                android:layout_height="160dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/button_selector"
                android:drawableTop="@drawable/ic_home_statistics"
                android:drawablePadding="-15sp"
                android:paddingTop="10sp"
                android:text="@string/Statistics_button_title"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/home_button_information"
                app:layout_constraintEnd_toStartOf="@+id/home_button_information"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_button_plans"
                app:layout_constraintVertical_bias="1.0"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/home_button_information"
                android:layout_width="0dp"
                android:layout_height="160dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_selector"
                android:drawableTop="@drawable/ic_action_name"
                android:drawablePadding="-15sp"
                android:paddingTop="10sp"
                android:text="@string/information_button_title"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/home_button_statistics"
                app:layout_constraintTop_toBottomOf="@+id/home_button_challenges"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/home_button_plans"
                android:layout_width="0dp"
                android:layout_height="160dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_selector"
                android:drawableTop="@drawable/ic_home_plans"
                android:drawablePadding="-15sp"
                android:paddingTop="32sp"
                android:elevation="1000dp"
                android:text="@string/plans_button_title"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/home_button_challenges"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_home"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/home_button_challenges"
                android:layout_width="0dp"
                android:layout_height="160dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_selector"
                android:drawableTop="@drawable/ic_home_challenges"
                android:drawablePadding="-15sp"
                android:paddingTop="32sp"
                android:text="@string/challenges_button_title"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/home_button_plans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/home_button_plans"
                app:layout_constraintTop_toBottomOf="@+id/text_home_about_us"
                app:layout_constraintVertical_bias="1.0"></androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:id="@+id/text_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/text_selector"
                android:text="@string/about_us_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_button_statistics"
                app:layout_constraintVertical_bias="0.298" />

            <TextView
                android:id="@+id/text_home_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_selector"
                android:text="@string/about_us_section"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.427"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_about_us" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>